salesforce/force-app/main/default/objects/Usage_Summary__c/Usage_Summary__c.object-meta.xml
<CustomObject>
    <description>Monthly usage per customer and meter, synced from the billing pipeline. Aggregates only: raw events never go to Salesforce (API and storage limits).</description>
    <label>Usage Summary</label>
    <nameField>
        <displayFormat>US-{000000}</displayFormat>
        <label>Usage Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>