salesforce/force-app/main/default/objects/Usage_Summary__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>customer_id:meter:period, e.g. cust_42:api_calls:2026-09. External ID for idempotent upserts.</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>