salesforce/force-app/main/default/objects/Usage_Summary__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <description>Meter name, e.g. api_calls or gb_stored.</description>
    <label>Meter</label>
    <length>64</length>
    <type>Text</type>
</CustomField>