salesforce/force-app/main/default/objects/Usage_Summary__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Total metered quantity for the period. Exact copy of the ledger value (6 decimal places).</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>